--- a/accounts.html
+++ b/accounts.html
@@ -3,162 +3,176 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Void Global Chat - Accounts</title>
+  <title>Void — Account</title>
   <style>
-    /* Basic styling for forms and containers */
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: black;
       color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+      text-align: center;
     }
-    .form-container {
-      background-color: #111;
+
+    header {
       padding: 20px;
-      border-radius: 8px;
-      margin: 10px;
-      width: 300px;
+      background-color: #111;
+      font-size: 28px;
+      font-weight: bold;
+      border-bottom: 1px solid #444;
     }
-    input {
-      width: 100%;
+
+    .form-container {
+      margin-top: 30px;
+    }
+
+    input, button {
+      margin: 5px;
       padding: 10px;
-      margin: 5px 0;
       border: none;
       border-radius: 4px;
     }
+
     button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
       background-color: #333;
       color: white;
-      border: none;
-      border-radius: 4px;
       cursor: pointer;
     }
+
     button:hover {
       background-color: #555;
     }
-    #profile-section {
+
+    .hidden {
       display: none;
-      text-align: center;
     }
-    #logout-button {
+
+    #profileView {
+      margin-top: 30px;
+    }
+
+    #editProfileForm {
       margin-top: 20px;
-      background-color: #444;
     }
   </style>
+
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-database-compat.js"></script>
 </head>
 <body>
 
-  <!-- Login Form -->
-  <div class="form-container" id="login-form">
-    <h2>Login</h2>
-    <input type="email" id="login-email" placeholder="Email" required />
-    <input type="password" id="login-password" placeholder="Password" required />
+  <header>VOID — Accounts</header>
+
+  <div class="form-container" id="authForms">
+    <h2 id="formTitle">Login</h2>
+    <input type="email" id="email" placeholder="Email"><br>
+    <input type="password" id="password" placeholder="Password"><br>
     <button onclick="login()">Login</button>
-    <p>Don't have an account? <a href="#" onclick="toggleForms()">Register here</a></p>
+    <button onclick="toggleForm()">Switch to Signup</button>
   </div>
 
-  <!-- Registration Form -->
-  <div class="form-container" id="register-form" style="display: none;">
-    <h2>Register</h2>
-    <input type="email" id="register-email" placeholder="Email" required />
-    <input type="password" id="register-password" placeholder="Password" required />
-    <button onclick="register()">Register</button>
-    <p>Already have an account? <a href="#" onclick="toggleForms()">Login here</a></p>
+  <div class="form-container hidden" id="signupForm">
+    <h2>Signup</h2>
+    <input type="text" id="signupUsername" placeholder="Username"><br>
+    <input type="email" id="signupEmail" placeholder="Email"><br>
+    <input type="password" id="signupPassword" placeholder="Password"><br>
+    <button onclick="signup()">Signup</button>
+    <button onclick="toggleForm()">Back to Login</button>
   </div>
 
-  <!-- Profile Section -->
-  <div id="profile-section">
-    <h2>Welcome, <span id="user-email"></span></h2>
-    <button id="logout-button" onclick="logout()">Logout</button>
+  <div id="profileView" class="hidden">
+    <h2>Your Profile</h2>
+    <p><strong>Username:</strong> <span id="viewUsername"></span></p>
+    <p><strong>Email:</strong> <span id="viewEmail"></span></p>
+    <button onclick="showEditForm()">Edit Profile</button>
+    <button onclick="logout()">Logout</button>
+  </div>
+
+  <div id="editProfileForm" class="hidden">
+    <h2>Edit Profile</h2>
+    <input type="text" id="editUsername" placeholder="New Username"><br>
+    <button onclick="saveProfile()">Save</button>
   </div>
 
   <script>
-    // Your Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyClW4zHDde1rQm6RkHQcD2rM0sklBBgdrM",
+      apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
       authDomain: "void-d9ec4.firebaseapp.com",
       databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
-      storageBucket: "void-d9ec4.appspot.com",
+      storageBucket: "void-d9ec4.firebasestorage.app",
       messagingSenderId: "267268035851",
-      appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
+      appId: "1:267268035851:web:d535fe4175c06f170f3e0e",
+      measurementId: "G-78DGNW8HV3"
     };
-
-    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
+    const db = firebase.database();
 
-    // Toggle between login and register forms
-    function toggleForms() {
-      const loginForm = document.getElementById('login-form');
-      const registerForm = document.getElementById('register-form');
-      loginForm.style.display = loginForm.style.display === 'none' ? 'block' : 'none';
-      registerForm.style.display = registerForm.style.display === 'none' ? 'block' : 'none';
+    function toggleForm() {
+      document.getElementById('authForms').classList.toggle('hidden');
+      document.getElementById('signupForm').classList.toggle('hidden');
     }
 
-    // Login function
+    function signup() {
+      const email = document.getElementById('signupEmail').value;
+      const password = document.getElementById('signupPassword').value;
+      const username = document.getElementById('signupUsername').value;
+
+      if (username.length < 6 || password.length < 8) {
+        alert("Username must be at least 6 characters, password at least 8.");
+        return;
+      }
+
+      auth.createUserWithEmailAndPassword(email, password).then(userCred => {
+        const uid = userCred.user.uid;
+        db.ref("users/" + uid).set({
+          username: username,
+          email: email
+        });
+      }).catch(err => alert(err.message));
+    }
+
     function login() {
-      const email = document.getElementById('login-email').value;
-      const password = document.getElementById('login-password').value;
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
 
-      auth.signInWithEmailAndPassword(email, password)
-        .then((userCredential) => {
-          // Signed in
-          showProfile(userCredential.user);
-        })
-        .catch((error) => {
-          alert(error.message);
-        });
+      auth.signInWithEmailAndPassword(email, password).catch(err => alert(err.message));
     }
 
-    // Register function
-    function register() {
-      const email = document.getElementById('register-email').value;
-      const password = document.getElementById('register-password').value;
-
-      auth.createUserWithEmailAndPassword(email, password)
-        .then((userCredential) => {
-          // Registered
-          showProfile(userCredential.user);
-        })
-        .catch((error) => {
-          alert(error.message);
-        });
-    }
-
-    // Show profile section
-    function showProfile(user) {
-      document.getElementById('login-form').style.display = 'none';
-      document.getElementById('register-form').style.display = 'none';
-      document.getElementById('profile-section').style.display = 'block';
-      document.getElementById('user-email').textContent = user.email;
-    }
-
-    // Logout function
     function logout() {
-      auth.signOut().then(() => {
-        document.getElementById('profile-section').style.display = 'none';
-        document.getElementById('login-form').style.display = 'block';
-      }).catch((error) => {
-        alert(error.message);
-      });
+      auth.signOut();
+      location.reload();
     }
 
-    // Check auth state on page load
-    auth.onAuthStateChanged((user) => {
+    function showEditForm() {
+      document.getElementById("editProfileForm").classList.remove("hidden");
+    }
+
+    function saveProfile() {
+      const newUsername = document.getElementById("editUsername").value;
+      const user = auth.currentUser;
+      if (user && newUsername.length >= 6) {
+        db.ref("users/" + user.uid).update({ username: newUsername });
+        document.getElementById("viewUsername").textContent = newUsername;
+        document.getElementById("editProfileForm").classList.add("hidden");
+      } else {
+        alert("Username must be at least 6 characters.");
+      }
+    }
+
+    auth.onAuthStateChanged(user => {
       if (user) {
-        showProfile(user);
+        document.getElementById("authForms").classList.add("hidden");
+        document.getElementById("signupForm").classList.add("hidden");
+        document.getElementById("profileView").classList.remove("hidden");
+
+        db.ref("users/" + user.uid).once("value").then(snapshot => {
+          const data = snapshot.val();
+          document.getElementById("viewUsername").textContent = data.username;
+          document.getElementById("viewEmail").textContent = data.email;
+        });
       }
     });
   </script>
